# rocket-school

./: README.md
lr-1/gnc/orientation/gyro-mpu6050/: Orientation.py
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/: Cargo.toml  cargo.sh  cargow  sync
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/: OrientationTaskInitializer.rs  lib.rs  main.rs  orientation_task_initializer.rs
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/orientation/: Angle.rs  Orientation.rs  mod.rs  processor.rs
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/orientation/filters/: kalman.rs
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/orientation/processor/: accelerometer_processor.rs  accellerometer_processor.rs  orientation_processor.rs  processor.rs  temperature_processor.rs
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/producer/: event_type.rs  mod.rs  multicast_client.rs  temperature_event.rs
lr-1/gnc/orientation/gyro-mpu6050/orientation-rs/src/util/: constants.rs  gyro_config.rs  power_config.rs
