[package]
name = "orientation-rs"
version = "0.1.0"
authors = ["JonLee <leex1825@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libc = "0.2"
rppal = "0.11"
#gpio = "0.4.1"
#sysfs_gpio = "0.5"
#mpu6050 = "0.1.3"
#i2cdev = "0.4.4"
#i2c-linux = "0.1.2"
