[package]
name = "orientation-rs"
version = "0.1.0"
authors = ["JonLee <leex1825@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.embedded-hal]
version = "0.2.4"

[dependencies.i2cdev]
version = "0.4.4"

[dependencies.libm]
version = "0.2.1"

[dependencies.linux-embedded-hal]
version = "0.3.0"

[dependencies.nalgebra]
default-features = false
version = "0.24.1"

[dependencies]
logs = "0.3.0"
socket2 = { version = "0.3.4", features = ["reuseport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
#socket2 = { version = "0.3.4", features = ["reuseport"] }
#lazy_static = "1.0"
#rppal = "0.11.3"
#linux-embedded-hal = "0.3.0"
#i2cdev = "0.4.4"
#libc = "0.2"
#gpio = "0.4.1"
#sysfs_gpio = "0.5"
#mpu6050 = "0.1.3"
#i2cdev = "0.4.4"
#i2c-linux = "0.1.2"
